--- a/customization.cfg
+++ b/customization.cfg
@@ -21,7 +21,7 @@ _EXT_CONFIG_PATH=~/.config/TKT.cfg
 _NUKR="true"
 
 # Git mirror to use to get the kernel sources, possible values for the linux kernel are "kernel.org", "googlesource.com", "github.com" and "torvalds". You can also build an Android-mainline kernel with "android-mainline".
-_git_mirror=""
+_git_mirror="android-mainline"
 
 # Root folder where to checkout the kernel sources (linux-src-git subdir) and build
 # Note: - Leave empty to use PKGBUILD's dir
