--- a/.github/workflows/arch-builder.yml
+++ b/.github/workflows/arch-builder.yml
@@ -13,9 +13,9 @@ env:
   _git_mirror: "github.com"
   PKGDEST: "/tmp/TKT"
   _debugdisable: "true"
-  _noccache: "true"
+  _noccache: "false"
   _STRIP: "true"
-  _kernel_on_diet: "true"
+  _kernel_on_diet: "false"
   _kernel_work_folder: "/tmp"
   _kernel_source_folder: "/tmp"
   # _modprobeddb: "true"
