--- a/.github/workflows/fedora-builder.yml
+++ b/.github/workflows/fedora-builder.yml
@@ -15,9 +15,9 @@ env:
   _logging_use_script: "no"
   _install_after_building: "no"
   _debugdisable: "true"
-  _noccache: "true"
+  _noccache: "false"
   _STRIP: "true"
-  _kernel_on_diet: "true"
+  _kernel_on_diet: "false"
   _kernel_work_folder: "/tmp"
   _kernel_source_folder: "/tmp"
   # _modprobeddb: "true"
