Catching up to TKG

--- a/customization.cfg
+++ b/customization.cfg
@@ -210,7 +210,7 @@ _zenify="true"
 _compileroptlevel="2"
 
 # CPU compiler optimizations - Defaults to prompt at kernel config if left empty
-# AMD CPUs : "k8" "k8sse3" "k10" "barcelona" "bobcat" "jaguar" "bulldozer" "piledriver" "steamroller" "excavator" "zen" "zen2" "zen3" "zen4" (zen3 opt support depends on GCC11) (zen4 opt support depends on GCC13)
+# AMD CPUs : "k8" "k8sse3" "k10" "barcelona" "bobcat" "jaguar" "bulldozer" "piledriver" "steamroller" "excavator" "zen" "zen2" "zen3" "zen4" "zen5" (zen3 opt support depends on GCC11) (zen4 opt support depends on GCC13) (zen5 opt support depends on GCC14 or CLANG 19.1)
 # Intel CPUs : "mpsc"(P4 & older Netburst based Xeon) "atom" "core2" "nehalem" "westmere" "silvermont" "sandybridge" "ivybridge" "haswell" "broadwell" "skylake" "skylakex" "cannonlake" "icelake" "goldmont" "goldmontplus" "cascadelake" "cooperlake" "tigerlake" "sapphirerapids" "rocketlake" "alderlake" "raptorlake" "meteorlake" (raptorlake and meteorlake opt support require GCC13)
 # Other options :
 # - "native_amd" (use compiler autodetection - Selecting your arch manually in the list above is recommended instead of this option)
@@ -218,10 +218,27 @@ _compileroptlevel="2"
 # - "generic" (kernel's default - to share the package between machines with different CPU µarch as long as they are x86-64)
 #
 # https://en.wikipedia.org/wiki/X86-64#Microarchitecture_Levels)
+# - "amd_cpu_v2" (depends on GCC11+ / CLANG12+ - to share the package between machines with different AMD CPU µarch supporting at least x86-64-v2
+# - "amd_cpu_v3" (depends on GCC11+ / CLANG12+ - to share the package between machines with different AMD CPU µarch supporting at least x86-64-v3
+# - "amd_cpu_v4" (depends on GCC11+ / CLANG12+ - to share the package between machines with different AMD CPU µarch supporting at least x86-64-v4
+# - "intel_cpu_v2" (depends on GCC11+ / CLANG12+ - to share the package between machines with different Intel CPU µarch supporting at least x86-64-v2
+# - "intel_cpu_v3" (depends on GCC11+ / CLANG12+ - to share the package between machines with different Intel CPU µarch supporting at least x86-64-v3
+# - "intel_cpu_v4" (depends on GCC11+ / CLANG12+ - to share the package between machines with different Intel CPU µarch supporting at least x86-64-v4
+# **LEGACY options - deprecated on current trees**
 # - "generic_v2" (depends on GCC11 - to share the package between machines with different CPU µarch supporting at least x86-64-v2
 # - "generic_v3" (depends on GCC11 - to share the package between machines with different CPU µarch supporting at least x86-64-v3
 # - "generic_v4" (depends on GCC11 - to share the package between machines with different CPU µarch supporting at least x86-64-v4
 _processor_opt=""
+
+# Desired x86_64 compiler ISA level for generic (depends on GCC11+ / CLANG12+) and _processor_opt="generic".
+# "1" for x86-64-v1
+# "2" for x86-64-v2
+# "3" for x86-64-v3
+# To share the package between machines with different CPU µarch supporting at least x86-64-v*.
+# You can find the best version for your CPU by running one of the following:
+#    /lib/ld-linux-x86-64.so.2 --help | grep supported
+#    /lib64/ld-linux-x86-64.so.2 --help | grep supported
+_x86_64_isalvl=""
 
 # CacULE only - Enable Response Driven Balancer, an experimental load balancer for CacULE
 _cacule_rdb="false"
