--- a/customization.cfg
+++ b/customization.cfg
@@ -282,8 +282,8 @@ _aggressive_ondemand="true"
 # Default was '', switched to 'bbr' by ETJAKEOC.
 _tcp_cong_alg="bbr"
 
-# You can pass a default set of kernel command line options here - example: "intel_pstate=passive nowatchdog amdgpu.ppfeaturemask=0xfffd7fff mitigations=off"
-_custom_commandline="intel_pstate=passive kernel.split_lock_mitigate=0"
+# You can pass a default set of kernel command line options here
+_custom_commandline="iommu=auto mitigations=auto tsc=reliable intel_pstate=passive kernel.split_lock_mitigate=0"
 
 # Selection of Clearlinux patches
 _clear_patches="true"
