--- a/customization.cfg
+++ b/customization.cfg
@@ -217,6 +217,9 @@ _compileroptlevel="2"
 # - "native_intel" (use compiler autodetection - Selecting your arch manually in the list above is recommended instead of this option)
 # - "generic" (kernel's default - to share the package between machines with different CPU µarch as long as they are x86-64)
 #
+# To figure out what to set this option to, you have two choices; For GCC - gcc -march=native -Q --help=target|grep march | For clang/llvm; llc --version | grep CPU
+# Take the outputted name from this, and paste it (in all lowercase) in the option below.
+#
 # https://en.wikipedia.org/wiki/X86-64#Microarchitecture_Levels)
 # - "amd_cpu_v2" (depends on GCC11+ / CLANG12+ - to share the package between machines with different AMD CPU µarch supporting at least x86-64-v2
 # - "amd_cpu_v3" (depends on GCC11+ / CLANG12+ - to share the package between machines with different AMD CPU µarch supporting at least x86-64-v3
