--- a/customization.cfg
+++ b/customization.cfg
@@ -131,6 +131,16 @@ _llvm_ias="1"
 # Default was '', switched to 'full' by ETJAKEOC.
 _lto_mode="full"
 
+# Profile-Guided Optimization (PGO) configuration
+# Options:
+# "false"    - Disable PGO (default)
+# "generate" - Build the kernel to collect profiling data
+# "use"      - Use collected profiling data to optimize the kernel
+_pgo_config=""
+
+# Directory to store or load profiling data for PGO
+_pgo_profile_dir="/var/lib/pgo"
+
 # Apply PREEMPT_RT patchset to the kernel.
 # ! Only CFS CPU scheduler is compatible with this patchset !
 # Set to "1" to enable.
