Added support to pull DRM kernel:   customization.cfg Added support to pull DRM kernel:   install.sh Added support to pull DRM kernel:   kconfigs/prepare

--- a/customization.cfg
+++ b/customization.cfg
@@ -20,7 +20,7 @@ _EXT_CONFIG_PATH=~/.config/TKT.cfg
 # Default is "true".
 _NUKR="true"
 
-# Git mirror to use to get the kernel sources, possible values for the linux kernel are "kernel.org", "googlesource.com", "github.com" and "torvalds". You can also build an Android-mainline kernel with "android-mainline".
+# Git mirror to use to get the kernel sources, possible values for the linux kernel are "kernel.org", "googlesource.com", "github.com", "torvalds" and "drm" for pulling the latest DRM kernel.
 # Default "kernel.org"
 _git_mirror="kernel.org"
 
