Removing dead scheduler choices from the script:   README.md Removing dead scheduler choices from the script:   customization.cfg Removing dead scheduler choices from the script:   kconfigs/prepare

--- a/customization.cfg
+++ b/customization.cfg
@@ -70,7 +70,8 @@ _modprobeddb_db_path=~/.config/modprobed.db
 _menunconfig=""
 
 # Set to true to generate a kernel config fragment from your changes in menuconfig/nconfig. Set to false to disable and skip the prompt.
-_diffconfig=""
+# Was set to blank, set to 'false' by ETJAKEOC.
+_diffconfig="false"
 
 # Set to the file name where the generated config fragment should be written to. Only used if _diffconfig is active.
 _diffconfig_name=""
@@ -90,7 +91,8 @@ _dracut_options="--lz4"
 #         If the .config file isn't up to date with the chosen kernel version, any extra CONFIG_XXXX is set to its default value.
 # Note: the script copies the resulting .config file as "kernelconfig.new" next to the PKGBUILD as a convenience for an eventual re-use. It gets overwritten at each run.
 #       One can use "kernelconfig.new" here to always use the latest edited .config file. modprobed-db needs to be used only once for its changes to be picked up.
-_configfile=""
+# Was blank, set to 'running-kernel' by ETJAKEOC.
+_configfile="running-kernel"
 
 # Determine whether to call "olddefconfig" (default) or "oldconfig" for manual config updating interaction.
 _config_updating="olddefconfig"
@@ -104,13 +106,13 @@ _STRIP="true"
 
 # LEAVE AN EMPTY VALUE TO BE PROMPTED ABOUT FOLLOWING OPTIONS AT BUILD TIME
 
-# CPU scheduler - Options are "pds", "bmq", "cacule", "tt", "bore", "bore-eevdf", "echo", "cfs" (linux 6.5-) or "eevdf" (kernel's default, 6.6+)
-# "upds" (TkG's Undead PDS) and "muqss" are also available on legacy kernel revisions
-_cpusched=""
+# CPU scheduler - Options are "cacule", "tt", "bore", "bore-eevdf", "echo", "cfs" (linux 6.5-) or "eevdf" (kernel's default, 6.6+)
+# Was blank, set to 'bore' by ETJAKEOC.
+_cpusched="bore"
 
 # Compiler to use - Options are "gcc" or "llvm".
 # For advanced users.
-# Default was '', switched to 'llvm' by ETJAKEOC.
+# Default was blank, switched to 'llvm' by ETJAKEOC.
 _compiler="llvm"
 
 # [Generic and Gentoo specific] Replace `libunwind` with `llvm-libunwind`.
@@ -128,7 +130,7 @@ _llvm_ias="1"
 # "no: do not enable LTO"
 # "full: uses 1 thread for Linking, slow and uses more memory, theoretically with the highest performance gains."
 # "thin: uses multiple threads, faster and uses less memory, may have a lower runtime performance than Full."
-# Default was '', switched to 'full' by ETJAKEOC.
+# Default was blank, switched to 'full' by ETJAKEOC.
 _lto_mode="full"
 
 # Profile-Guided Optimization (PGO) configuration
@@ -136,7 +138,7 @@ _lto_mode="full"
 # "false"    - Disable PGO (default)
 # "generate" - Build the kernel to collect profiling data
 # "use"      - Use collected profiling data to optimize the kernel
-_pgo_config=""
+_pgo_config="false"
 
 # Directory to store or load profiling data for PGO
 _pgo_profile_dir="/var/lib/pgo"
@@ -158,7 +160,7 @@ _preempt_rt_force=""
 # For BMQ:           0: No yield.
 #                    1: Deboost and requeue task. (Default)
 #                    2: Set rq skip task.
-# Default was '', switched to '0' by ETJAKEOC.
+# Default was blank, switched to '0' by ETJAKEOC.
 _sched_yield_type="0"
 
 # Round Robin interval is the longest duration two tasks with the same nice level will be delayed for. When CPU time is requested by a task, it receives a time slice equal
@@ -167,7 +169,6 @@ _sched_yield_type="0"
 # PDS default: 4ms"
 # BMQ default: 2ms"
 # Set to "1" for 2ms, "2" for 4ms, "3" for 6ms, "4" for 8ms, or "default" to keep the chosen scheduler defaults.
-# Default was 'default', switched to 'default' by ETJAKEOC.
 _rr_interval="default"
 
 # Set to "true" to disable FUNCTION_TRACER/GRAPH_TRACER, lowering overhead but limiting debugging and analyzing of kernel functions - Kernel default is "false"
@@ -184,11 +185,11 @@ _misc_adds="true"
 # Full tickless can give higher performances in case you use isolation of CPUs for tasks
 # and it works only when using the nohz_full kernel parameter, otherwise behaves like idle.
 # Just tickless idle perform better for most platforms.
-# Default was '', switched to '1' by ETJAKEOC.
+# Default was blank, switched to '1' by ETJAKEOC.
 _tickless="1"
 
 # Set to "true" to use ACS override patch - https://wiki.archlinux.org/index.php/PCI_passthrough_via_OVMF#Bypassing_the_IOMMU_groups_.28ACS_override_patch.29 - Kernel default is "false"
-# Default was '', switched to 'true' by ETJAKEOC.
+# Default was blank, switched to 'true' by ETJAKEOC.
 _acs_override="true"
 
 # Set to "true" to add Bcache filesystem support. You'll have to install bcachefs-tools-git from AUR for utilities - https://bcachefs.org/
@@ -205,7 +206,6 @@ _bcachefs="false"
 _ntsync="true"
 
 # Set to "true" to enable Binder modules to use Waydroid Android containers
-# !!! Not available on Project C schedulers (PDS & BMQ) due to disabled PSI on those !!!
 _waydroid=""
 
 # Various patches and tweaks from Zen/Liquorix, Xanmod and the community - Default is "true"
@@ -278,31 +278,34 @@ _bore_min_base_slice_ns="2000000"
 _random_trust_cpu="true"
 
 # Timer frequency - "100" "250" "300" "500" "750" "1000" ("2000" is available for cacule cpusched only, "625" is available for echo cpusched only) - More options available in kernel config prompt when left empty depending on selected cpusched with the default option pointed with a ">" (2000 for cacule, 100 for muqss, 625 for echo and 1000 for other cpu schedulers)
-# Default was '', switched to '750' by ETJAKEOC.
+# Default was blank, switched to '750' by ETJAKEOC.
 _timer_freq="750"
 
 # Default CPU governor - "performance", "ondemand", "schedutil" or leave empty for default (schedutil)
+# Was 'schedutil', switched to 'ondemand' for better frequency switching by ETJAKEOC.
 _default_cpu_gov="ondemand"
 
 # Use an aggressive ondemand governor instead of default ondemand to improve performance on low loads/high core count CPUs while keeping some power efficiency from frequency scaling.
 # It still requires you to either set ondemand as default governor or to select it in some way at runtime.
 _aggressive_ondemand="true"
 
-# [Advanced] Default TCP IPv4 algorithm to use. Options are: "yeah", "bbr", "cubic", "reno", "vegas" and "westwood". Leave empty if unsure.
+# [Advanced] Default TCP IPv4 algorithm to use. Options are: "cake", "yeah", "bbr", "cubic", "reno", "vegas" and "westwood". Leave empty if unsure.
 # This config option will not be prompted
 # Can be changed at runtime with the command line `# echo "$name" > /proc/sys/net/ipv4/tcp_congestion_control` where $name is one of the options above.
 # Default (empty) and fallback : cubic
-# Default was '', switched to 'bbr' by ETJAKEOC.
-_tcp_cong_alg="bbr"
+# Default was blank, switched to 'cake' by ETJAKEOC.
+_tcp_cong_alg="cake"
 
 # You can pass a default set of kernel command line options here
+# Added some sane defaults for every single machine on the planet by ETJAKEOC.
 _custom_commandline="iommu=auto mitigations=auto tsc=reliable intel_pstate=passive kernel.split_lock_mitigate=0"
 
 # Selection of Clearlinux patches
 _clear_patches="true"
 
 # Add OpenRGB compatibility for certain i2c controllers - https://gitlab.com/CalcProgrammer1/OpenRGB/-/blob/master/OpenRGB.patch
-_openrgb="true"
+# Was set to 'true', changed to 'false' by ETJAKEOC, as RGB does not belong in PC's. Re-enable if you need it.
+_openrgb="false"
 
 
 #### SPESHUL OPTION ####
@@ -320,7 +323,7 @@ _kernel_localversion=""
 # Set to your maximum number of CPUs (physical + logical cores) - Lower means less overhead - You can set it to "$(nproc)" to use the current host's CPU(s) core count, or leave empty to use default
 # If you set this to a lower value than you have cores, some cores will be disabled
 # Default Arch kernel value is 320
-# Default was '', switched to '$nproc' by ETJAKEOC.
+# Default was blank, switched to '$nproc' by ETJAKEOC.
 _NR_CPUS_value="$nproc"
 
 # [non-Arch only] Install kernel after the building is done ?
@@ -332,21 +335,8 @@ _logging_use_script="yes"
 
 #### LEGACY OPTIONS ####
 
-# Upstreamed version of Fsync from Linux 5.16 for previous kernel versions - https://github.com/andrealmeid/futex_waitv_patches
-# ! Only affect 5.13, 5.14 and 5.15 kernel branches. Safely ignored for 5.16 or newer !
-_fsync_backport="true"
-
 # Fsync legacy, known as FUTEX_WAIT_MULTIPLE (opcode 31) - previous version of fsync required for Valve Proton 4.11, 5.0 and 5.13 - https://steamcommunity.com/games/221410/announcements/detail/2957094910196249305
 _fsync_legacy="true"
-
-# Set to "true" to enable support for futex2, a DEPRECATED interface that can be used by proton-tkg and proton 5.13 experimental through Fsync - Can be enabled alongside fsync legacy to use it as a fallback
-# https://gitlab.collabora.com/tonyk/linux/-/tree/futex2-dev
-# ! Only affect 5.10-5.14 kernel branches. Safely ignored for 5.15 or newer !
-# ! required _fsync_backport="false" !
-_fsync_futex2="false"
-
-# Set to "true" to add back missing symbol for AES-NI/AVX support on ZFS - This is a legacy option that can be ignored on 5.10+ kernels - https://github.com/NixOS/nixpkgs/blob/master/pkgs/os-specific/linux/kernel/export_kernel_fpu_functions.patch
-_zfsfix="true"
 
 # MuQSS only - CPU scheduler runqueue sharing - No sharing (RQ_NONE), SMT (hyperthread) siblings (RQ_SMT), Multicore siblings (RQ_MC), Symmetric Multi-Processing (RQ_SMP), NUMA (RQ_ALL)
 # Valid values are "none", "smt", "mc", "mc-llc"(for zen), "smp", "all" - Kernel default is "smt"
