defconfig updates, some customization updates to make more new user friendly

--- a/customization.cfg
+++ b/customization.cfg
@@ -205,7 +205,8 @@ _bcachefs="false"
 _ntsync="true"
 
 # Set to "true" to enable Binder modules to use Waydroid Android containers
-_waydroid=""
+# Set to "false" by ETJAKEOC, since Google's new android policy broke all Waydroid support.
+_waydroid="false"
 
 # Various patches and tweaks from Zen/Liquorix, Xanmod and the community - Default is "true"
 _glitched_base="true"
